# pensieve

./: .env  .gitignore  API_DOCUMENTATION.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  __init__.py  agent.md  api_extension_proposal.py  api_extensions_for_data_storage.py  api_server.py  autonomous_agent.py  contacts.csv  create_cache_tables_simple.sql  deep_intellegence.py  frontend_api.py  gmail_send.py  index.html  install.sh  interactive_intelligence.py  main.py  package-lock.json  package.json  pyproject.toml  quick_start.sh  requirements.in  requirements.txt  send_emails.py  setup_intelligence_cache_tables.py  setup_supabase_schema.md  simple_backend.py  simple_financial_api.py  start_apis.py  start_backend.py  tailwind.config.js  template.html  test_autonomous_agent.py  test_comprehensive_data_storage.py  test_real_company.py  (+5 more)
config/: logging_config.py  settings.py  supabase_client.py
data-pipeline/: event_processor.py
database/: enhanced_data_storage_schema.sql  intelligence_cache_schema.sql  supabase_schema.sql
docs/: GLOBE_IMPLEMENTATION.md  gemini_orchestration.md  gmail_sender_guide.md  mock_financial_scenarios.md  progress1.md  supabase_setup.md
intelligence-engine/: __init__.py  autonomous_action_engine.py  decision_orchestrator.py
intelligence-engine/cache/: gemini_intelligence_tool.py  intelligence_cache_manager.py
intelligence-engine/storage/: data_storage_manager.py
intelligence-engine/tools/: __init__.py  communication_actions.py  competitive_actions.py  customer_actions.py  financial_actions.py  operational_actions.py
mcp-servers/brex-mcp/: financial_monitor.py  mock_financial_data.py
mcp-servers/cfo-mcp/: cfo_server.py
mcp-servers/mixrank-mcp/: technology_intelligence.py
mcp-servers/pylon-mcp/: customer_intelligence.py
mcp-servers/sixtyfour-mcp/: market_intelligence.py  sixtyfour_api_client.py
src/: App.tsx
src/config/: api.ts
src/data/: mockCompanies.ts  mockTransactions.ts
src/hooks/: use-toast.tsx
src/lib/: demo-store.tsx
src/pages/: Actions.tsx  Chessboard.tsx  Dashboard.tsx  Settings.tsx  Signals.tsx  (+1 more)
tests/: simple_supabase_test.py  simple_test_mcp.py  test_async_sixtyfour.py  test_intellegence.py  test_intelligence_cache.py  test_mcp_intelligence.py  test_orchestration.py  test_quick_sixtyfour.py  test_real_sixtyfour.py  test_sixtyfour_client.py  test_sixtyfour_only.py  test_sixtyfour_simple.py  test_supabase.py  test_wow_intelligence.py
utils/: error_handlers.py
(+31 files in other folders)
