[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pensieve-cio"
version = "0.1.0"
description = "Autonomous AI Chief Intelligence Officer for startups"
authors = [{name = "Pensieve Team"}]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.8.0", # Updated for mcp compatibility
    "mcp", # Explicitly added for dependency resolution
    "google-generativeai>=0.3.2",
    "openai>=1.3.7",
    "httpx>=0.27.0", # Updated for mcp compatibility
    "redis>=5.0.1",
    "supabase", # Removed version constraint to allow upgrade
    "postgrest==0.13.2",
    "asyncpg>=0.29.0",
    "celery>=5.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "ruff>=0.1.8",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]